easybank-landing-page-master/app/scss/_globals.scss
html {
  font-size: 100%;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
  line-height: 1.3;
  font-family: "Public Sans", sans-serif;
  font-size: $font-med;
  font-weight: 300;
  color: $grayishBlue;
  min-height: 300vh;

  @include breakpoint-up(large) {
    font-size: $font-med;
  }

  &.noscroll {
    overflow: hidden;
  }
}

a,
a:visited,
a:hover {
  text-decoration: none;
}

// Flexbox
.flex {
  display: flex;

  &-jc-sb {
    justify-content: space-between;
  }

  &-jc-c {
    justify-content: center;
  }

  &-ai-c {
    align-items: center;
  }
}

// Buttons
button,
.button {
  padding: 0.875rem 2.1875rem;
  border-radius: 50px;
  cursor: pointer;
  background: linear-gradient(to right, $limeGreen, $brightCyan);
  border: 0;
  color: #fff;
  font-weight: 400;
  font-size: $font-sm;
  // we added display because anchor tag by default is inline so it is going into padding thing so we are adding display inline block
  display: inline-block;
  transition: opacity 300ms ease-in-out;

  &:hover {
    opacity: 0.75;
  }
}

// spacing
.container {
  max-width: 69.375rem;
  margin: auto;

  &--pall {
    padding-top: 4.375rem;
    padding-right: 1.5rem;
    padding-bottom: 4.375rem;
    padding-left: 1.5rem;

    @include breakpoint-up(large) {
      padding-top: 6rem;
      padding-bottom: 6rem;
    }
  }
  &--py {
    padding-bottom: 4.375rem;
    padding-top: 4.375rem;
  }
  &--px {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
  &--pt {
    padding-top: 4.375rem;
  }
  &--pb {
    padding-bottom: 4.375rem;
  }
  &--pl {
    padding-left: 1.5rem;
  }
  &--pr {
    padding-right: 1.5rem;
  }
}

h1,
h2,
h3 {
  margin-top: 0px;
  font-weight: 300;
  line-height: 1.15;
  color: $darkBlue;
}

h2 {
  margin-bottom: 1.5625rem;
  @include breakpoint-up(large) {
    font-size: 2.25rem;
    margin-bottom: 2.25rem;
  }
}

h1 {
  font-size: 2.31rem;
  margin-bottom: 2.25rem;
  @include breakpoint-up(large) {
    font-size: $font-xlg;
  }
}

p {
  line-height: 1.5;
}

// Visiblity
.hide-for-mobile {
  // hide for tablet and mobile devices
  @include breakpoint-down(medium) {
    display: none;
  }
}

.hide-for-desktop {
  // hide for desktop viewport widths
  @include breakpoint-up(large) {
    display: none;
  }
}

